fix margins and pop up window size on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* default to border-box */
 html {
   box-sizing: border-box;
@@ -38,6 +37,7 @@ a:hover {
 @media (max-width: 800px) {
   .container {
     flex-direction: column;
+    margin: auto;
   }
 }
 #profile {
@@ -69,6 +69,12 @@ a:hover {
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
+}
+
+@media (max-width: 400px) {
+  #phd-window {
+    width: 90%;
+  }
 }
 
 #close {
